--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -1,107 +1,87 @@
-# Default values for argocd.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+global:
+  addPrometheusAnnotations: true
 
-replicaCount: 1
+argo-cd:
+  controller:
+    metrics:
+      enabled: true
+    replicas: 1
+    resources:
+      requests:
+        cpu: 1
+        memory: 1Gi
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  crds:
+    install: true
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+  namespace: argocd
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  server:
+    metrics:
+      enabled: true
 
-podAnnotations: {}
-podLabels: {}
+    # Отключаем Ingress, если не используем его
+    ingress:
+      enabled: false
 
-podSecurityContext: {}
-  # fsGroup: 2000
+    # Меняем тип сервиса на NodePort для прямого доступа
+    service:
+      type: NodePort
+      nodePort: 30080  # Указываем порт, по которому будем обращаться
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+    resources:
+      requests:
+        cpu: 100m
+        memory: 256Mi
 
-service:
-  type: ClusterIP
-  port: 80
+  configs:
+    params:
+      server.insecure: "true"
+    cm:
+      url: http://localhost:30080  # Обновляем URL на локальный адрес и порт
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  repoServer:
+    metrics:
+      enabled: true
+    resources:
+      limits:
+        memory: 2Gi
+      requests:
+        cpu: 300m
+        memory: 1Gi
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  applicationSet:
+    replicas: 1
+    metrics:
+      enabled: true
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  redis:
+    metrics:
+      enabled: true
 
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
 
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
+  notifications:
+    metrics:
+      enabled: true
 
-nodeSelector: {}
+    resources:
+      requests:
+        cpu: 100m
+        memory: 256Mi
 
-tolerations: []
+  dex:
+    enabled: false
 
-affinity: {}
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
