--- a/charts/rechnomat/templates/rechnomat.yaml
+++ b/charts/rechnomat/templates/rechnomat.yaml
@@ -41,10 +41,7 @@ spec:
     app: {{ .Values.application.name }}
   ports:
     - name: http
-      port: 8080        # Порт сервиса внутри кластера
-      targetPort: 8080  # Порт контейнера
-      nodePort: 38080   # Порт на узле
-    - name: https
-      port: 9001        # Порт сервиса внутри кластера
-      targetPort: 9001  # Порт контейнера
-      nodePort: 39001   # Порт на узле
+      port: {{ .Values.service.port}}
+      targetPort: 9001
+      protocol: TCP
+
