--- a/charts/rechnomat/templates/rechnomat.yaml
+++ b/charts/rechnomat/templates/rechnomat.yaml
@@ -21,10 +21,18 @@ spec:
           ports:
             - containerPort: {{ .Values.application.port }}
           env:
-        {{- range $key, $value := .Values.application.env }}
+                  {{- range $key, $value := .Values.application.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
-        {{- end }}
+                  {{- end }}
+
+                  {{- range $key, $value := .Values.application.secrets }}
+            - name: {{ $key }}
+              valueFrom:
+                secretKeyRef:
+                  name: rechnomat-secrets
+                  key: {{ $key }}
+                  {{- end }}
       imagePullSecrets:
         - name: {{ .Values.image.pullSecrets.name}}
 
