--- a/charts/rechnomat/templates/secrets.yaml
+++ b/charts/rechnomat/templates/secrets.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: application-secrets
+  name: rechnomat-secrets
 type: Opaque
 data:
-  DATABASE_PASSWORD: {{ .Values.database.devPassword | b64enc }}
-  DATABASE_IT_PASSWORD: {{ .Values.database.itPassword | b64enc }}
-  KEYCLOAK_ADMIN_PASSWORD: {{ .Values.keycloak.adminPassword | b64enc }}
-  WEBDAV_USERNAME: {{ .Values.webdav.username | b64enc }}
-  WEBDAV_PASSWORD: {{ .Values.webdav.password | b64enc }}
+  DB_DEV_PASS: {{.Values.application.secrets.DB_DEV_PASS | b64enc | quote}}
+  DB_IT_PASS: {{.Values.application.secrets.DB_IT_PASS | b64enc | quote}}
+  KEYCLOAK_ADMIN_PASSWORD: {{.Values.application.secrets.KEYCLOAK_ADMIN_PASSWORD | b64enc | quote}}
+  WEBDAV_PASS: {{.Values.application.secrets.WEBDAV_PASS | b64enc | quote}}
+
