--- a/charts/rechnomat/templates/postgers-dev.yaml
+++ b/charts/rechnomat/templates/postgers-dev.yaml
@@ -1,11 +1,3 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: postgres-dev-secrets
-type: Opaque
-data:
-  POSTGRES_PASSWORD: {{ .Values.database.devPassword | b64enc }}
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,18 +20,21 @@ spec:
           ports:
             - containerPort: 5432
           env:
+            - name: POSTGRES_USER
+              value: {{ .Values.application.env.DB_DEV_USER | quote }}
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-dev-secrets
-                  key: POSTGRES_PASSWORD
+                  name: rechnomat-secrets
+                  key: DB_DEV_PASS
             - name: POSTGRES_DB
-              value: dev_db
+              value: {{ .Values.application.env.DB_DEV_NAME | quote }}
+
           volumeMounts:
-            - name: postgres-storage
+            - name: postgres-dev-data
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-storage
+        - name: postgres-dev-data
           persistentVolumeClaim:
             claimName: postgres-dev-pvc
 ---
@@ -61,9 +56,10 @@ metadata:
   labels:
     app: postgres-dev
 spec:
-  type: ClusterIP
-  selector:
-    app: postgres-dev
   ports:
     - port: 5432
       targetPort: 5432
+      protocol: TCP
+      name: postgres
+  selector:
+    app: postgres-dev
