--- a/charts/rechnomat/templates/postgres-it.yaml
+++ b/charts/rechnomat/templates/postgres-it.yaml
@@ -1,13 +1,3 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: postgres-it-secrets
-type: Opaque
-data:
-  POSTGRES_PASSWORD: {{ .Values.database.itPassword | b64enc }}
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,13 +20,16 @@ spec:
           ports:
             - containerPort: 5432
           env:
+            - name: POSTGRES_USER
+              value: {{ .Values.application.env.DB_IT_USER | quote }}
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-it-secrets
-                  key: POSTGRES_PASSWORD
+                  name: rechnomat-secrets
+                  key: DB_IT_PASS
             - name: POSTGRES_DB
-              value: it_db
+              value: {{ .Values.application.env.DB_IT_NAME | quote }}
+
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
@@ -73,3 +66,5 @@ spec:
   ports:
     - port: 5432
       targetPort: 5432
+      protocol: TCP
+      name: postgres
