--- a/charts/rechnomat/templates/webdav.yaml
+++ b/charts/rechnomat/templates/webdav.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: webdav-secrets
-type: Opaque
-data:
-  WEBDAV_USERNAME: {{ .Values.webdav.username | b64enc }}
-  WEBDAV_PASSWORD: {{ .Values.webdav.password | b64enc }}
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -31,21 +20,22 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: USERNAME
+            - name: WEBDAV_HOST
+              value: {{ .Values.application.env.WEBDAV_HOST | quote }}
+            - name: WEBDAV_PORT
+              value: {{ .Values.application.env.WEBDAV_PORT | quote }}
+            - name: WEBDAV_USER
+              value: {{ .Values.application.env.WEBDAV_USER | quote }}
+            - name: WEBDAV_PASS
               valueFrom:
                 secretKeyRef:
-                  name: webdav-secrets
-                  key: WEBDAV_USERNAME
-            - name: PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: webdav-secrets
-                  key: WEBDAV_PASSWORD
+                  name: rechnomat-secrets
+                  key: WEBDAV_PASS
           volumeMounts:
-            - name: webdav-storage
-              mountPath: /var/lib/dav
+            - name: webdav-data
+              mountPath: /var/lib/webdav
       volumes:
-        - name: webdav-storage
+        - name: webdav-data
           persistentVolumeClaim:
             claimName: webdav-pvc
 
@@ -77,3 +67,5 @@ spec:
   ports:
     - port: 80
       targetPort: 80
+      protocol: TCP
+      name: http
