fixed image pull

--- a/charts/rechnomat/values.yaml
+++ b/charts/rechnomat/values.yaml
@@ -4,7 +4,7 @@ image:
   repository: nikivash/rechnomat
   tag: latest
   pullSecrets:
-    name: docker-private-image
+    name: regcred
   pullPolicy: IfNotPresent
 
 application:
