added new storageClass and changed Pvc

--- a/charts/rechnomat/templates/dovecot.yaml
+++ b/charts/rechnomat/templates/dovecot.yaml
@@ -35,6 +35,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: dovecot-pvc
 spec:
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
