--- a/charts/rechnomat/templates/postgers-dev.yaml
+++ b/charts/rechnomat/templates/postgers-dev.yaml
@@ -43,6 +43,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-dev-pvc
 spec:
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
