--- a/charts/rechnomat/templates/postgres-it.yaml
+++ b/charts/rechnomat/templates/postgres-it.yaml
@@ -45,6 +45,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-it-pvc
 spec:
+  storageClassName: local-path
   accessModes:
     - ReadWriteOnce
   resources:
