--- a/charts/rechnomat/values.yaml
+++ b/charts/rechnomat/values.yaml
@@ -21,7 +21,7 @@ application:
     DB_IT_NAME: "it-db"
     DB_IT_USER: "postgres"
 
-    KEYCLOAK_URL: "http://keycloak:8080"
+    KEYCLOAK_URL: "http://localhost:9990"
     KEYCLOAK_ADMIN_USERNAME: "admin"
     KEYCLOAK_REALM: "SpringBootKeycloak"
     KEYCLOAK_CLIENT_ID: "admin-cli"
