--- a/charts/rechnomat/templates/webdav.yaml
+++ b/charts/rechnomat/templates/webdav.yaml
@@ -48,7 +48,7 @@ metadata:
 spec:
   storageClassName: local-path
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: {{ .Values.webdav.storageSize }}
