--- a/charts/rechnomat/values.yaml
+++ b/charts/rechnomat/values.yaml
@@ -26,6 +26,7 @@ application:
     KEYCLOAK_ADMIN_USERNAME: "admin"
     KEYCLOAK_REALM: "SpringBootKeycloak"
     KEYCLOAK_CLIENT_ID: "admin-cli"
+    KC_HTTP_PORT: 9990
 
     WEBDAV_HOST: "webdav"
     WEBDAV_PORT: "80"
