changing private repo for images and adding realm in keycloak image

--- a/charts/rechnomat/templates/configmaps.yaml
+++ b/charts/rechnomat/templates/configmaps.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dovecot-config
+  name: keycloak-realm-config
+  labels:
+    app: keycloak
 data:
-  dovecot.conf: |
-    # Ваши настройки Dovecot
-    protocols = imap
-    mail_location = maildir:~/Maildir
-    ssl = no
+  realm-export.json: |-
+{{ .Files.Get "path/to/your/realm-export.json" | indent 4 }}
