writting right image version for rechnomat

--- a/charts/rechnomat/templates/keycloak.yaml
+++ b/charts/rechnomat/templates/keycloak.yaml
@@ -22,6 +22,7 @@ spec:
           command:
             - "/opt/keycloak/bin/kc.sh"
             - "start-dev"
+            - "--import-realm"
           ports:
             - containerPort: {{.Values.application.env.KC_HTTP_PORT}}
           env:
